k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: accidents-severity
  labels:
    project: accidents-severity
