k8s/06-api.yaml
# ============================================================
# API FastAPI : Deployment + Service
# ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: accidents-severity
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
      annotations:
        # Autodiscovery Prometheus — scrape /metrics si prometheus-fastapi-instrumentator installé
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: api
          image: localhost:8081/accidents_severity-api:1.0
          imagePullPolicy: IfNotPresent
          # ===================================================================
          # CORRECTION : On force le lancement de FastAPI à la place de DVC
          # ===================================================================
          command: ["uvicorn"]
          args: ["src.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
          # ===================================================================
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: artifacts
              mountPath: /app/artifacts
            - name: data-storage
              mountPath: /app/data
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 15
      volumes:
        - name: artifacts
          persistentVolumeClaim:
            claimName: mlflow-artifacts-pvc
        - name: data-storage
          persistentVolumeClaim:
            claimName: data-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: accidents-severity
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
