k8s/07-ingress.yaml
# Traefik est l'ingress controller inclus par défaut dans k3s
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accidents-severity-ingress
  namespace: accidents-severity
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure  # ← HTTPS port 443
    traefik.ingress.kubernetes.io/router.tls: "true"  
spec:
  ingressClassName: traefik
  tls:
    - secretName: nginx-tls-secret   
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8000
          - path: /mlflow
            pathType: Prefix
            backend:
              service:
                name: mlflow-service
                port:
                  number: 5000
---
# Strip du préfixe /api avant transmission au service
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: accidents-severity
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-mlflow
  namespace: accidents-severity
spec:
  stripPrefix:
    prefixes:
      - /mlflow
